--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wpget"
-version = "0.1.3"
+version = "0.1.4"
 description = "A tool for downloading all posts from a WordPress website via public JSON API"
 authors = [{ name = "Seanghay Yath", email = "seanghay.dev@gmail.com" }]
 readme = "README.md"
@@ -15,7 +15,7 @@ classifiers = [
   'Programming Language :: Python :: 3.8',
 ]
 
-dependencies = ["tqdm", "requests", "fake-useragent"]
+dependencies = ["tqdm", "requests", "fake-useragent", "chardet"]
 
 [project.urls]
 Homepage = "https://pypi.org/project/wpget"
